[gd_scene load_steps=12 format=3 uid="uid://drrtianxfkmgl"]

[ext_resource type="Script" path="res://Assets/Engine/Part_scripts/Top.gd" id="1_0u21v"]
[ext_resource type="Texture2D" uid="uid://caqk3rhosnwa8" path="res://Textures/Engines/Nagata 2S-16I/Top/Nagata 2S-16i Top.png" id="2_ptws4"]
[ext_resource type="Texture2D" uid="uid://cbn8yxpbmw2tf" path="res://Textures/Engines/Nagata 2S-16I/Top/Nagata 2S-16i Top NM.png" id="3_mtsvo"]
[ext_resource type="Texture2D" uid="uid://dk8w35o7nnx6i" path="res://Textures/Engines/Nagata 2S-16I/Top/Nagata 2S-16i Top Spec.png" id="4_mjxkp"]
[ext_resource type="Script" path="res://Assets/Engine/Code/Sound_handler_engine.gd" id="5_j061b"]
[ext_resource type="AudioStream" uid="uid://drdr7cbe4x2ad" path="res://Sound/Engine Sounds/2S-16i/2S-16i stock throttle 1000rpm.mp3" id="6_psvh8"]
[ext_resource type="AudioStream" uid="uid://d1ch6xbjt0oxe" path="res://Sound/Engine Sounds/2S-16i/2S-16i stock no_throttle 1000rpm.mp3" id="7_h303k"]
[ext_resource type="AudioStream" uid="uid://b86imbjsgnnyb" path="res://Sound/Engine Sounds/2S-16i/2S-16i stock no_throttle 4000rpm.mp3" id="8_8qy6v"]
[ext_resource type="AudioStream" uid="uid://bumo62fftckdb" path="res://Sound/AirFlow Sound.mp3" id="8_hgncb"]
[ext_resource type="AudioStream" uid="uid://b6mw0k4fa36m7" path="res://Sound/Engine Sounds/2S-16i/2S-16i stock throttle 4000rpm.mp3" id="9_6rkf4"]

[sub_resource type="CanvasTexture" id="CanvasTexture_lfkia"]
diffuse_texture = ExtResource("2_ptws4")
normal_texture = ExtResource("3_mtsvo")
specular_texture = ExtResource("4_mjxkp")
specular_shininess = 0.2

[node name="Nagata 2S-16i Stock Top" type="Node2D"]
script = ExtResource("1_0u21v")
rarity = "uncommon"
lenght = 27
width = 8
Engine_ID = 2
Part_Number = 1
description = "The factory top end of the 2S-16i Engine"
weight = 25.0
tq_mod = 1.0
max_hp_rpm = 5800
max_compression = 11.0
smoothness = 0.96

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_lfkia")

[node name="Sound_handler" type="Node2D" parent="."]
script = ExtResource("5_j061b")

[node name="engine_sound_throttle_1000rpm" type="AudioStreamPlayer2D" parent="Sound_handler"]
stream = ExtResource("6_psvh8")

[node name="engine_sound_no_throttle_1000rpm" type="AudioStreamPlayer2D" parent="Sound_handler"]
stream = ExtResource("7_h303k")

[node name="engine_sound_no_throttle_4000rpm" type="AudioStreamPlayer2D" parent="Sound_handler"]
stream = ExtResource("8_8qy6v")

[node name="engine_sound_throttle_4000rpm" type="AudioStreamPlayer2D" parent="Sound_handler"]
stream = ExtResource("9_6rkf4")

[node name="Airflow" type="AudioStreamPlayer2D" parent="Sound_handler"]
stream = ExtResource("8_hgncb")
